<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BeatFlow</string>
    <string name="songs">Songs</string>
    <string name="favorites">Liked</string>
    <string name="playlists">Library</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="no_songs_found">No music found on device</string>
    <string name="no_favorites">Songs you like will appear here\nTap ♥ to like a song</string>
    <string name="no_playlists">Create your first playlist</string>
    <string name="search_hint">Artists, songs, or podcasts</string>
    <string name="search_no_results">No results found</string>
    <string name="search_hint_text">Find songs on your device</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="shuffle">Shuffle</string>
    <string name="repeat">Repeat</string>
    <string name="add_to_favorites">Like</string>
    <string name="remove_from_favorites">Remove from Liked</string>
    <string name="add_to_playlist">Add to Playlist</string>
    <string name="share">Share</string>
    <string name="song_info">Song Info</string>
    <string name="create_playlist">New Playlist</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="theme">Theme</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="about">About</string>
    <string name="equalizer">Equalizer</string>
    <string name="permission_title">Allow Access to Music</string>
    <string name="permission_message">BeatFlow needs access to your audio files to play music</string>
    <string name="permission_grant">Allow</string>
    <string name="permission_deny">Not Now</string>
    <string name="queue">Queue</string>
    <string name="recently_played">Recently Played</string>
    <string name="home">Home</string>
    <string name="lyrics">Lyrics</string>
    <string name="speed">Playback Speed</string>
    <string name="sort">Sort</string>
    <string name="all_songs">All Songs</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <plurals name="song_count">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
</resources>
